--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'Publishers'' catalogs -- England'
 - !lcc 'Z'
 - !lcsh 'Methuen & Co. -- Catalogs'
+- GITenberg
 title: A Selection of Books Published by Methuen & Co. September 1913
 url: http://www.gutenberg.org/ebooks/42977
